Fix spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -180,6 +180,10 @@ ul {
   padding-left: 2rem;
 }
 
+.fa-ul > li {
+  padding-bottom: 1em;
+}
+
 ol,
 ul,
 dl {
